--- a/authentication/templates/authentication/dealer_dashboard.html
+++ b/authentication/templates/authentication/dealer_dashboard.html
@@ -22,6 +22,18 @@
                             </div>
                         </div>
                     </div>
+                    <!-- NOVO CARD DE PESQUISA -->
+                    <div class="col-md-6">
+                        <div class="card bg-success text-white">
+                            <div class="card-body">
+                                <h5 class="card-title">Pesquisar Veículos</h5>
+                                <p class="card-text">Pesquise veículos por nome, marca ou tipo de carroceria.</p>
+                                <a href="{% url 'search_vehicles' %}" class="btn btn-light">
+                                    Fazer Pesquisa
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
